<?xml version="1.0"?>
<package format="2">
  <name>mdas_dbw_can</name>
  <version>0.0.0</version>
  <description>The mdas_dbw package</description>

  <author email="bjsmyth@umich.edu">Brandon Smyth</author>
  <maintainer email="bjsmyth@umich.edu">Brandon Smyth</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>can_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>mdas_dbw_msgs</build_depend>
  <build_export_depend>can_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>mdas_dbw_can_node</build_export_depend>
  <exec_depend>can_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>mdas_dbw_msgs</exec_depend>
  <exec_depend>mdas_dbw_can_node</exec_depend>


  <export>

  </export>
</package>
